Rota para o perfil e ajustando cadastropets/postagem/editar/excluir

--- a/WEB/View/Pages/Feed.html
+++ b/WEB/View/Pages/Feed.html
@@ -30,7 +30,7 @@
         <!-- Imagem do perfil -->
 
         <ul class="dropdown-menu">
-          <li><a class="dropdown-item" href="./Login.html" onclick="viewProfile()">Ver Perfil</a></li>
+          <li><a class="dropdown-item" href="/MyProfile" onclick="viewProfile()">Ver Perfil</a></li>
           <li><a class="dropdown-item" href="#" onclick="logOff()">Sair</a></li>
 
 
