--- a/WEB/View/Pages/home.html
+++ b/WEB/View/Pages/home.html
@@ -25,7 +25,7 @@
                 <h2>Bem vindo ao Patinhas do Bem</h2>
                 <p>O site onde você pode adotar ou doar animais com facilidade.Transforme vidas com um simples gesto!
                 </p>
-                <a href="/Login">Acessar</a> <!--inserir o link da pagina de login aqui-->
+                <a href="/LoginPage">Acessar</a> <!--inserir o link da pagina de login aqui-->
             </div>
             <div class="imgBox"> <!-- imagem pricipal do home -->
                 <img src="../../Public/Image/gatoecachorro.png">
@@ -189,3 +189,4 @@
 
 </html>
 
+<!--  -->
