--- a/WEB/Public/CSS/Feed.css
+++ b/WEB/Public/CSS/Feed.css
@@ -165,6 +165,16 @@ nav {
 .dropdown {
     position: relative; /* Para posicionamento correto do dropdown */
     margin-left: 50px;
+    display: flex;
+}
+
+#notify {
+  margin-bottom: 15px;
+}
+
+#userNameContent {
+  margin-top: 10px;
+  margin-left: 10px;
 }
 
 .profile-dropdown-pic {
