--- a/WEB/Public/CSS/Feed.css
+++ b/WEB/Public/CSS/Feed.css
@@ -46,14 +46,14 @@ footer {
     left: 0;
     padding: 8px 0;
     font-family: "Armata", sans-serif;
-    background-color: #4A5C6A;
+    background-color: #11212D;
 }
 
 
 /* =============== Sidebar ============== */
 .sidebar {
     width: 250px;
-    background-color:#4A5C6A;
+    background-color:#11212D;
     height: 79vh;
     padding: 20px;
     position: relative;
@@ -109,7 +109,7 @@ footer {
 /* =============== Navbar ============== */
 /* Estilo do Navbar */
 nav {
-    background-color: #4A5C6A; /* Cor de fundo */
+    background-color: #11212D; /* Cor de fundo */
     padding: 15px 20px; /* Espaçamento interno */
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Sombra */
 }
@@ -1111,9 +1111,10 @@ img {
 
 /* Estilo do botão */
 #notificationButton {
-    background-color: #4A5C6A; /* Verde suave */
-   border-color:#4A5C6A ;
-   color: #000000;
+    background-color: #06141B; /* Verde suave */
+   /* border-color:#4A5C6A ; */
+   color: white;
+   transition: 100ms;
 }
 
 /* Hover no botão */
