--- a/WEB/Public/CSS/Feed.css
+++ b/WEB/Public/CSS/Feed.css
@@ -129,6 +129,20 @@ nav {
     margin-left: 20px;
 }
 
+.img1{
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  text-align: center;
+}
+
+.img1 img {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
+
+
 /* Estilo da Barra de Pesquisa */
 .search-bar {
     display: flex;
