percurso quase completo

--- a/WEB/View/Pages/Feed.html
+++ b/WEB/View/Pages/Feed.html
@@ -200,13 +200,13 @@ https://cdn.jsdelivr.net/npm/js-cookie@3.0.5/dist/js.cookie.min.js
           <div class="feed-post">
             <div class="post-header">
               <div class="user-avatar">
-                <a href="./Login.html">
+                <a>
                   <img class="user-photo" src="" alt="Foto do Usuário">
                 </a>
               </div>
 
               <div class="user-info">
-                <a href="./Login.html" class="user-name">Thiago Antonio</a>
+                <a class="user-name">Thiago Antonio</a>
                 <p class="post-date">Publicado em 17 de outubro de 2024</p>
               </div>
 
